{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 21,
  "lineage": "0af3a4dc-6792-597c-7e75-04929d9c867d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-05T15:01:05.249-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-436907/global/firewalls/firewall-rule-allow-http80",
            "log_config": [],
            "name": "firewall-rule-allow-http80",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/networks/vpc1",
            "priority": 1000,
            "project": "terraform-practice-436907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/firewalls/firewall-rule-allow-http80",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "weserver-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-12-05T15:01:05.155-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-practice-436907/global/firewalls/firewall-rule-allow-ssh22",
            "log_config": [],
            "name": "firewall-rule-allow-ssh22",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/networks/vpc1",
            "priority": 1000,
            "project": "terraform-practice-436907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/firewalls/firewall-rule-allow-ssh22",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "myapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/zones/us-central1-a/disks/myapp0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-12-05T15:01:27.523-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/terraform-practice-436907/zones/us-central1-a/instances/myapp0",
            "instance_id": "772621317810654761",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "d4UwCJmI2nI=",
            "name": "myapp0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.44.101.93",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/networks/vpc1",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/regions/us-central1/subnetworks/subnet1",
                "subnetwork_project": "terraform-practice-436907"
              }
            ],
            "project": "terraform-practice-436907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/zones/us-central1-a/instances/myapp0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-tag",
              "weserver-tag"
            ],
            "tags_fingerprint": "YBtNkRBlTgQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_firewall.fw-http",
            "google_compute_firewall.fw_ssh",
            "google_compute_network.myVPC",
            "google_compute_subnetwork.mysubnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241112",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/zones/us-central1-a/disks/myapp1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-12-05T15:01:25.970-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/terraform-practice-436907/zones/us-central1-a/instances/myapp1",
            "instance_id": "3354016457934474794",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "d4UwCJmI2nI=",
            "name": "myapp1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.66.167.173",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/networks/vpc1",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/regions/us-central1/subnetworks/subnet1",
                "subnetwork_project": "terraform-practice-436907"
              }
            ],
            "project": "terraform-practice-436907",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/zones/us-central1-a/instances/myapp1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-tag",
              "weserver-tag"
            ],
            "tags_fingerprint": "YBtNkRBlTgQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_firewall.fw-http",
            "google_compute_firewall.fw_ssh",
            "google_compute_network.myVPC",
            "google_compute_subnetwork.mysubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-practice-436907/global/networks/vpc1",
            "mtu": 0,
            "name": "vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1544473674441002613",
            "project": "terraform-practice-436907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/networks/vpc1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-05T15:01:06.339-08:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/terraform-practice-436907/regions/us-central1/subnetworks/subnet1",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/global/networks/vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-practice-436907",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-practice-436907/regions/us-central1/subnetworks/subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.myVPC"
          ]
        }
      ]
    }
  ]
}